--- a/modules/users/client/views/profile/profile-edit.client.view.html
+++ b/modules/users/client/views/profile/profile-edit.client.view.html
@@ -63,6 +63,12 @@
         </a>
       </p>
 
+      <!-- @TODO: temporarily here -->
+      <form action="/api/couchsurfing-import" method="post" enctype="multipart/form-data">
+        <input type="file" name="import-file"><br/>
+        <input type="submit" value="Submit">
+      </form>
+
     </div>
     <div class="col-xs-12 col-sm-9">
       <div ui-view></div>
