fix lint errors, config and showing references

--- a/modules/users/client/views/profile/profile-view.client.view.html
+++ b/modules/users/client/views/profile/profile-view.client.view.html
@@ -29,6 +29,7 @@
   username="profileCtrl.profile.username"
   isSelf="profileCtrl.profile._id === app.user._id"
   contactCount="profileCtrl.contacts.length"
+  referencesEnabled="app.appSettings.referencesEnabled"
 ></bottom-navigation-small>
 <!--
 this is just a hack because binding of contactCount doesn't work properly
