Map: add style control

--- a/modules/core/client/components/Map/map.less
+++ b/modules/core/client/components/Map/map.less
@@ -50,3 +50,10 @@
     color: @gray;
   }
 }
+
+.map-style-control-container {
+  left: 10px;
+  position: absolute;
+  top: 10px;
+  z-index: 5;
+}
