--- a/modules/users/client/views/profile/profile-view.client.view.html
+++ b/modules/users/client/views/profile/profile-view.client.view.html
@@ -254,9 +254,11 @@ this is a fallback when the contacts are loading
                   <a ui-sref="profile.references.list" role="tab">
                     <span aria-hidden="true">References</span>
                     <!-- not implemented
-                    <span class="badge"
-                          aria-hidden="true"
-                          ng-bind="profileCtrl.referencesCount || 0"></span>
+                    <span
+                      class="badge"
+                      aria-hidden="true"
+                      ng-bind="profileCtrl.referencesCount || 0"
+                    ></span>
                     <span class="sr-only">
                       {{profileCtrl.referencesCount || 0}} References
                     </span>
