--- a/modules/core/server/views/partials/header.server.view.html
+++ b/modules/core/server/views/partials/header.server.view.html
@@ -118,7 +118,7 @@
         <a ui-sref="inbox" aria-label="Messages">
           <i class="icon-messages icon-fw icon-lg visible-xs-block"></i>
           <span class="hidden-xs">Messages</span>
-          <messages-unread-count></messages-unread-count>
+          <unread-count></unread-count>
         </a>
       </li>
       <li ui-sref-active="active" class="hidden-xs">
